@@ -1,5 +1,8 @@
 2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/conditional.c (CreateFlagString):
+	fixed quoting in conditional command conditions
+
 	* fvwm/menus.c (__mloop_handle_event):
 	removed unnecessary querying of pointer position on button release in
 	menus
